# saorsa-cli

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  demo.sh
.github/workflows/: ci.yml  release.yml
.planning/: ISSUES.md  PLAN-1.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-5.md  PLAN-6.md  PLAN-7.md  PLAN-8.md  PLAN-9.md  ROADMAP.md  STATE.md
cli/: Cargo.toml  README.md
cli/src/: config.rs  downloader.rs  error.rs  main.rs  menu.rs  platform.rs  plugin.rs  runner.rs  self_update.rs  updater.rs  version.rs
crates/saorsa/: Cargo.toml
crates/saorsa-cli-core/: Cargo.toml
crates/saorsa-cli-core/src/: app.rs  error.rs  event.rs  lib.rs  pane.rs  plugin.rs  plugin_history.rs  tab.rs  theme.rs
crates/saorsa-cli-core/src/plugin/: builtin_plugins.rs
crates/saorsa-disk/: Cargo.toml
crates/saorsa-disk/src/: analyzer.rs  error.rs  lib.rs  tab.rs
crates/saorsa-git/: Cargo.toml
crates/saorsa-git/src/: error.rs  lib.rs  repo.rs  tab.rs
crates/saorsa-git/src/widgets/: diff.rs  mod.rs  status.rs
crates/saorsa-sb/: Cargo.toml
crates/saorsa-sb/src/: lib.rs  tab.rs
crates/saorsa-ui/: Cargo.toml
crates/saorsa-ui/src/: app.rs  lib.rs  renderer.rs  tab_manager.rs
crates/saorsa-ui/src/widgets/: mod.rs  status_bar.rs  tab_bar.rs
crates/saorsa/src/: main.rs  plugins_tab.rs
docs/: PLUGINS.md
docs/signing/: saorsa-public.asc
sb/: Cargo.toml  README.md
sb/src/: app.rs  editor.rs  event_handler.rs  lib.rs  main.rs  preview.rs
scripts/: create-release.sh  install.sh
sdisk/: Cargo.toml
sdisk/src/: main.rs
workspace-hack/: Cargo.toml
