[workspace]
members = ["sb", "sdisk", "cli", "crates/saorsa-cli-core", "crates/saorsa-ui", "crates/saorsa-sb", "crates/saorsa-disk", "crates/saorsa-git", "crates/saorsa"]
default-members = ["crates/saorsa"]
resolver = "2"

[workspace.package]
authors = ["David Irvine <david.irvine@maidsafe.net>"]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/saorsa-cli"
homepage = "https://github.com/dirvine/saorsa-cli"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
tui-textarea = { path = "vendor/tui-textarea" }
