[package]
name = "cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["David Irvine <david.irvine@saorsa.net>"]
description = "Interactive CLI menu for Saorsa tools with automatic binary management"
repository = "https://github.com/dirvine/saorsa-cli"
homepage = "https://github.com/dirvine/saorsa-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "menu", "terminal", "saorsa"]
categories = ["command-line-utilities"]

[[bin]]
name = "saorsa"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.29"

# HTTP client for downloading
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File paths and directories
dirs = "5"

# Archive handling
flate2 = "1"
tar = "0.4"
zip = "2"

# Checksums
sha2 = "0.10"
hex = "0.4"

# Progress indication
indicatif = "0.17"

# Interactive prompts
dialoguer = "0.11"

# Configuration
toml = "0.8"

# Async utilities
futures = "0.3"
libloading = "0.8"

[dev-dependencies]
tempfile = "3"
mockito = "1"