[package]
name = "saorsa-cli-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for saorsa TUI framework"

[dependencies]
thiserror = "2"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["sync"] }
toml = "0.8"
dirs = "5"
libloading = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.42", features = ["test-util", "rt-multi-thread", "macros"] }
tempfile = "3.10"
